2001-03-08  Bruce Korb  <bkorb@gnu.org>

	gcc.c(main): ensure SIGCHLD handling is set to SIG_DFL so that
	wait4() can receive the signal.

Thu Mar  8 21:09:10 2001  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* fixinc/inclhack.def (AAB_dgux_int_varargs): Don't use HTML
	entities.
	* fixinc/fixincl.x: Regenerate.

Thu Mar  8 21:09:10 2001  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* fixinc/inclhack.def (AAA_standards): Undo <standards.h> breakage
	on Tru64 UNIX.
	* fixinc/fixincl.x: Regenerate.

Thu Mar  8 19:42:08 CET 2001  Jan Hubicka  <jh@suse.cz>

	* reg-stack.c (move_for_stack_reg): Avoid non-popint fst for
	TFmode too.

Thu Mar  8 06:32:50 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* config/i386/i386.md (clrstrsi): Call ix86_set_move_mem_attrs.

2001-03-08  Alexandre Oliva  <aoliva@redhat.com>

	* configure.in (enable_shared): Support per-package shared-library
	enabling.
	* configure: Rebuilt.

2001-03-07  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.md (cr logic): Add original POWER mnemonic alternative
	for crnot.  Set operands[5] in splitter.

2001-03-07  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in: Allow config-lang.in to set `lang_requires' to list
	of other required languages.

2001-03-07  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.md (call_osf_1_noreturn): New pattern.

2001-03-07  Laurynas Biveinis  <lauras@softhome.net>

        * fixinc/inclhack.def (djgpp_wchar_h): New test.
        * fixinc/fixincl.x: Regenerated.
		
2001-03-06  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* Restore change that patch misapplied.
	* config/i386/i386.c (ix86_set_move_mem_attrs): New function.
	(ix86_set_move_mem_attrs_1): Likewise.
	* config/i386/i386-protos.h (ix86_set_move_mem_attrs): New declaration.
	* config/i386/i386.md (movstrsi): Call it.

2001-03-06  Stephen L Moshier  <moshier@mediaone.net>

	* config/m68k/m68k.c (const_uint32_operand): Accept any
	const_int on a 32-bit host.
